--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'Android/**'
+      - 'React/**'
+      - 'Spring/**'
 
 jobs:
   deploy:
